Tue May 12 08:26:55 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:
        * tests/Bug_3171_Regression/server.cpp:
        * tests/DII_AMI_Forward/orb_initializer.h:

          TAO_Local_RefCounted_Object is deprecated. Changed
          it to CORBA::LocalObject.

Mon May 11 09:54:38 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/DII_AMI_Forward/server_interceptor.cpp:
          Fixed fuzz error.

Mon May 11 07:21:16 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/DII_AMI_Forward/server_interceptor.cpp:
          Fixed compile warning.

Fri May  8 19:30:55 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/RTCORBA/Activity/Builder.cpp:

          Really fix fuzz.

Fri May  8 14:23:07 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_2234_Regression/server.cpp:
        * tests/Bug_3171_Regression/server.cpp:
        * tests/Bug_2345_Regression/server.cpp:
        * tests/DII_AMI_Forward/server_interceptor.cpp:
        * tests/DII_AMI_Forward/server_interceptor.h:
        * tests/DII_AMI_Forward/orb_initializer.h:

          Fixed memory leaks in these tests.

        * tao/ORB.cpp:

          Fixed allocation of a string with incorrect length.

Thu May  7 22:46:50 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/RTCORBA/Bug_3643_Regression/Bug_3643_Regression.mpc:

          Prevent building the server for corba_e/minimum_corba.

Thu May  7 19:45:01 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/RTCORBA/Activity/Builder.cpp:

          Fuzz fix.

        * orbsvcs/tests/ImplRepo/ReconnectServer/client.cpp:
        * orbsvcs/tests/ImplRepo/ReconnectServer/serverA.cpp:
        * orbsvcs/tests/ImplRepo/ReconnectServer/serverB.cpp:

          Clean up compiler errors.

Thu May  7 18:14:03 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_exception\exception_ch.cpp:
        * TAO_IDL/be/be_visitor_home\home_ch.cpp: