@@ -1,0 +1,7 @@
+// $Id$
+
+interface testInterface
+{
+  void firstCalling ();
+  void secondCalling ();
+};
